# Phidias

./: .gitignore  .todo  CMakeLists.txt  CMakeSettings.json  README.md  entry.cpp
.github/workflows/: build-linux.yml  build-windows.yml  build.yml
